--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       Titone said, “Had we not had that footprint in the cloud journey, we wouldn’t have been able to develop these models and be able to process that data as quickly as we could.”
       </p>
       <div id="fastScroller">
-<!--        <script async src="https://cdn.avantisvideo.com/avm/js/video-loader.js?id=4102c20e-d414-456e-897a-9a26f6d87257&tagId=99" id="avantisJS"> </script>-->
+        <script async src="https://cdn.avantisvideo.com/avm/js/video-loader.js?id=4102c20e-d414-456e-897a-9a26f6d87257&tagId=99" id="avantisJS"> </script>
       </div>
       <h1>Working with data</h1>
       <p class="mb-3">
