--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body
     class="post-template-default single single-post postid-2704551 single-format-standard singular category-ai channel-ai AI"
     onload="onLoadPage()" id="body">
-  <div id="engineConfiguration" class="engineConfiguration">
+  <div id="engineConfiguration" class="engineConfiguration pe-md-5 ps-md-5">
     <div class="leftSide">
       <p class='dataPoint'>User type:</p>
       <select name="runType" class="runType" onchange="changeVideoType()" id="runTypeBar">
