--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <option value="slowInternet">Slow Internet</option>
         <option value="nonHuman">Non-Human</option>
       </select>
-      <div id="dataPointContainer">
+      <div id="dataPointContainer" class="dataPointContainer">
         <p class='dataPoint' style='display:none;'>Spots found:</p>
         <span class="dataPointValue" id="dataPointValueSpotsFound" style='display:none;'>0</span>
         <p class='dataPoint'>Network speed:</p>
