--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body
     class="post-template-default single single-post postid-2704551 single-format-standard singular category-ai channel-ai AI"
-    onload="onLoadPage()" id="body">
+    onload="onLoadPage()">
   <div id="engineConfiguration" class="engineConfiguration pe-md-5 ps-md-5">
     <div class="leftSide">
       <p class='dataPoint'>User type:</p>
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-  <div class="container-fluid">
+  <div class="container-fluid" id="page-body">
     <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
       <div class="col-md px-0">
         <h1 class="display-4 header">Duke Energy used computer vision and robots to cut costs by $74M</h1>
