change scroll to top

--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--  <meta name="viewport" content="" id="myViewport">-->
-  <link href="style/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style/demoPage.css">
-  <link rel="stylesheet" href="style/fonts.css">
   <title>Demo Page</title>
   <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
   <!-- Custom styles for this template -->
+  <link href="style/normalize.css" rel="stylesheet">
+  <link href="style/demoPage.css" rel="stylesheet">
+  <link href="style/fonts.css" rel="stylesheet">
   <link href="style/blog.css" rel="stylesheet">
   <link href="style/device.css" rel="stylesheet">
  </head>
 
-  <body
-    class="post-template-default single single-post postid-2704551 single-format-standard singular category-ai channel-ai AI"
-    onload="onLoadPage()" id="body">
+  <body onload="onLoadPage()" id="body">
   <div id="engineConfiguration" class="engineConfiguration pe-md-5 ps-md-5">
     <div class="leftSide">
       <p class='dataPoint'>User type:</p>
